# schema-infer-plugin

./: .gitignore  API_REFERENCE.md  DOCUMENTATION.md  EXAMPLES.md  QUICK_START.md  README.md  TESTING.md  cc-config.yaml  install-plugin.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  schema-infer  schema-infer-schema  schema-infer.yaml  test_summary.py
examples/: __init__.py  basic_usage.py
schema_infer/: __init__.py  config.py
schema_infer/core/: __init__.py  consumer.py  discovery.py  inferrer.py  registry.py
schema_infer/formats/: __init__.py  detector.py  parsers.py
schema_infer/plugin/: __init__.py  auth.py  cli.py  optimistic.py
schema_infer/schemas/: __init__.py  generators.py  inference.py
schema_infer/utils/: __init__.py  exceptions.py  logger.py  performance.py  validators.py
tests/: conftest.py  test_core_components.py  test_format_detection.py  test_schema_generators.py  test_schema_inference.py
