[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-infer-plugin"
version = "0.1.0"
description = "CLI plugin for inferring schemas from Kafka topics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Schema Inference Plugin", email = "schema-infer@example.com"},
]
keywords = ["kafka", "schema", "avro", "protobuf", "json-schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = [
    "schema-infer-kafka>=2.3.0",
    "schema-infer-kafka[avro]>=2.3.0",
    "schema-infer-kafka[protobuf]>=2.3.0",
    "schema-infer-kafka[schema-registry]>=2.3.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "avro-python3>=1.10.0",
    "protobuf>=4.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.0.0",
    "urllib3<2.0",  # Compatible with LibreSSL on macOS
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
schema-infer-schema-infer = "schema_infer.cli:main"

[project.urls]
Homepage = "https://github.com/schema-inferinc/schema-infer-plugin"
Repository = "https://github.com/schema-inferinc/schema-infer-plugin"
Documentation = "https://docs.schema-infer.io/schema-infer"
"Bug Tracker" = "https://github.com/schema-inferinc/schema-infer-plugin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_infer*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["schema_infer"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
